cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_460.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1672: error: DEAD_STORE
  The value written to &bp (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1672:10: Write of unused value
1670.               }
1671.           }
1672.           *bp++ = '\0';
                 ^
1673.   
1674.           /* If not at EOS (must be + or /), move forward. */
